--- a/local.env
+++ b/local.env
@@ -3,3 +3,4 @@ API_HASH="c90318d7f7ef57670ec298ac4efe3be2"
 BOT_TOKEN="5801897059:AAGTN9PQi4BSkZtv31TfFRKLGRi5okQZJMA"
 LOG_GROUP_ID="1001802689505"
 DATABASE_URL="645a315ecde92a3069096a6b"
+OWNER_ID="2008351295"
